--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "gpt4all": "^1.0.0",
     "node-nlp": "^4.24.0",
     "nodemailer": "^6.8.0",
     "openai": "^3.2.1",
