--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@mantine/notifications": "^5.10.0",
     "@nlpjs/basic": "^4.23.5",
     "axios": "^1.2.2",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "gpt4all": "^1.0.0",
+    "jsonwebtoken": "^9.0.0",
     "node-nlp": "^4.24.0",
     "nodemailer": "^6.8.0",
     "openai": "^3.2.1",
@@ -41,8 +43,10 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/nodemailer": "^6.4.6",
     "@types/prettier": "^2.7.1",
     "@types/react-css-modules": "^4.6.4",
