--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/hooks": "^5.10.0",
     "@mantine/notifications": "^5.10.0",
     "@nlpjs/basic": "^4.23.5",
+    "@types/react": "^18.0.33",
     "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
@@ -43,6 +44,7 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
@@ -50,10 +52,15 @@
     "@types/nodemailer": "^6.4.6",
     "@types/prettier": "^2.7.1",
     "@types/react-css-modules": "^4.6.4",
+    "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^8.0.0",
     "prettier": "2.8.0",
@@ -61,8 +68,10 @@
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
+    "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
