--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production ts-node index.ts",
     "dev": "cross-env NODE_ENV=development ts-node-dev index.ts",
-    "start:training": "cross-env NODE_ENV=development ts-node index.ts",
-    "build:training": "webpack --config webpack.config.js --mode production",
-    "dev:training": "webpack --watch --config webpack.config.js --mode development"
+    "build:client": "node esbuild.config.mjs",
+    "dev:client": "node esbuild.dev.config.mjs"
   },
   "keywords": [],
   "author": "",
@@ -44,11 +43,11 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.15.11",
     "@types/nodemailer": "^6.4.6",
     "@types/prettier": "^2.7.1",
     "@types/react-css-modules": "^4.6.4",
@@ -56,23 +55,15 @@
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^9.1.2",
-    "css-loader": "^6.7.3",
+    "css-tree": "^2.3.1",
+    "esbuild": "^0.17.15",
+    "esbuild-sass-plugin": "^2.8.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
-    "html-webpack-plugin": "^5.5.0",
-    "node-sass": "^8.0.0",
+    "postcss": "^8.4.21",
+    "postcss-modules": "^6.0.0",
     "prettier": "2.8.0",
-    "react-css-modules": "^4.7.11",
-    "sass": "^1.57.1",
-    "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "typings-for-css-modules-loader": "^1.7.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "typescript": "^4.9.4"
   }
 }
