--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ node_modules
 db
 api-keys.json
 *model.*
-# dont allow build unless it's in the training directory
 build/*
+bundle.*
 datastore/*
 storage/analytics/*
 storage/metadata/*
