--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "gpt4all": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "node-nlp": "^4.24.0",
     "nodemailer": "^6.8.0",
     "openai": "^3.2.1",
