--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.10.0",
+    "@mantine/form": "^6.0.7",
     "@mantine/hooks": "^5.10.0",
     "@mantine/notifications": "^5.10.0",
     "@nlpjs/basic": "^4.23.5",
