--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production tsx index.ts",
-    "dev": "cross-env NODE_ENV=development tsx watch index.ts",
+    "dev:server": "cross-env NODE_ENV=development tsx watch index.ts",
     "build:client": "node esbuild.config.mjs",
-    "dev:client": "node esbuild.dev.config.mjs"
+    "dev:client": "node esbuild.dev.config.mjs",
+    "dev:all": "concurrently \"npm run dev:server\" \"npm run dev:client\""
   },
   "keywords": [],
   "author": "",
@@ -57,6 +58,7 @@
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "concurrently": "^8.0.1",
     "css-tree": "^2.3.1",
     "esbuild": "^0.17.15",
     "esbuild-sass-plugin": "^2.8.0",
