--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ api-keys.json
 *model.*
 build/*
 bundle.*
-datastore/*
+datastore/database.sqlite
+datastore/bots/documents/*
+datastore/bots/models/*
 storage/analytics/*
 storage/metadata/*
 storage/logs/*
