feat: added some UI stuff and bot select

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mantine/hooks": "^5.10.0",
     "@mantine/notifications": "^5.10.0",
     "@nlpjs/basic": "^4.23.5",
+    "@phosphor-icons/react": "^2.0.8",
     "@types/react": "^18.0.33",
     "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
@@ -34,7 +35,6 @@
     "node-nlp": "^4.24.0",
     "nodemailer": "^6.8.0",
     "openai": "^3.2.1",
-    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
