--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@phosphor-icons/react": "^2.0.8",
     "@types/react": "^18.0.33",
     "axios": "^1.2.2",
+    "axios-cache-interceptor": "^1.0.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
