--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.6.1",
     "sqlite3": "^5.1.6",
     "typeorm": "^0.3.12",
     "uuid": "^9.0.0"
