--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production tsx index.ts",
     "dev:server": "cross-env NODE_ENV=development tsx watch index.ts",
-    "build:client": "node esbuild.config.mjs",
     "dev:client": "node esbuild.dev.config.mjs",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "build:widgets": "node esbuild.widgets.config.mjs"
+    "build:client": "node esbuild.config.mjs",
+    "build:widgets": "node esbuild.widgets.config.mjs",
+    "build": "npm run build:client && npm run build:widgets"
   },
   "keywords": [],
   "author": "",
