--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "build:client": "node esbuild.config.mjs",
     "build:widgets": "node esbuild.widgets.config.mjs",
-    "build": "npm run build:client && npm run build:widgets"
+    "build": "npm run build:client && npm run build:widgets",
+    "typeorm": "typeorm-ts-node-esm"
   },
   "keywords": [],
   "author": "",
@@ -71,6 +72,7 @@
     "postcss": "^8.4.21",
     "postcss-modules": "^6.0.0",
     "prettier": "2.8.0",
+    "ts-node": "^10.9.1",
     "tsx": "^3.12.6",
     "typescript": "^4.9.4"
   }
