--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.11.0",
-    "@mantine/core": "^5.10.5",
+    "@mantine/core": "^6.0.11",
     "@mantine/form": "^6.0.11",
-    "@mantine/hooks": "^5.10.5",
-    "@mantine/notifications": "^5.10.5",
+    "@mantine/hooks": "^6.0.11",
+    "@mantine/notifications": "^6.0.11",
+    "@mantine/prism": "^6.0.11",
     "@nlpjs/basic": "^4.27.0",
     "@phosphor-icons/react": "^2.0.9",
     "@types/react": "^18.2.7",
@@ -49,9 +50,9 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.8",
-    "@babel/preset-env": "^7.21.5",
-    "@babel/preset-react": "^7.18.6",
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.2",
+    "@babel/preset-react": "^7.22.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
