--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build:client": "node esbuild.config.mjs",
     "build:widgets": "node esbuild.widgets.config.mjs",
     "build": "npm run build:client && npm run build:widgets",
-    "typeorm": "typeorm-ts-node-esm"
+    "typeorm": "typeorm-ts-node-esm",
+    "migrations:run": "typeorm-ts-node-esm migration:run -d database/index.ts",
+    "migrations:rollback": "typeorm-ts-node-esm migration:revert -d database/index.ts"
   },
   "keywords": [],
   "author": "",
