--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gpt4all": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
+    "multer": "1.4.5-lts.1",
     "node-nlp": "^4.27.0",
     "nodemailer": "^6.9.2",
     "openai": "^3.2.1",
@@ -59,6 +60,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.16.15",
     "@types/nodemailer": "^6.4.8",
     "@types/prettier": "^2.7.2",
