--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.11.0",
-    "@mantine/core": "^6.0.11",
+    "@mantine/core": "^6.0.13",
     "@mantine/form": "^6.0.11",
-    "@mantine/hooks": "^6.0.11",
-    "@mantine/notifications": "^6.0.11",
-    "@mantine/prism": "^6.0.11",
+    "@mantine/hooks": "^6.0.13",
+    "@mantine/notifications": "^6.0.13",
+    "@mantine/prism": "^6.0.13",
+    "@mantine/spotlight": "^6.0.13",
     "@nlpjs/basic": "^4.27.0",
     "@phosphor-icons/react": "^2.0.9",
     "@types/react": "^18.2.7",
